<!-- Copyright 2018 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Make Me MAD Shopping List</string>

    <string name="hint_item">Add an item</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Item not saved because it is empty.</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="delete_item_preamble">Deleting </string>
    <string name="clear_data_toast_text">Clear the data now!</string>
    <string name="no_item">No item</string>
    <string name="unable_to_update">Unable to update the item</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item description</string>
    <string name="add_an_item_description">Add an item description</string>
    <string name="item_quantity">Item quantity</string>
    <string name="action_contact">Contact</string>
    <string name="about">About</string>
    <string name="about_title">&lt;h1&gt;About&lt;/h1&gt;</string>
    <string name="about_version">&lt;h3&gt;Version&lt;/h3&gt; You are using version &lt;tt&gt;v%1$s&lt;/tt&gt;</string>
    <string name="about_github">&lt;h3&gt;Source code&lt;/h3&gt; Project hosted on &lt;a href="https://github.com/eromang/MakeMeMADShoppingList"&gt;Github&lt;/a&gt;</string>
    <string name="about_license">&lt;h3&gt;License&lt;/h3&gt; Make Me MAD Shopping List is licensed under Penguin license</string>
    <string name="about_author">&lt;h3&gt;Author&lt;/h3&gt; Eric ROMANG</string>
    <string name="about_contributors">&lt;h3&gt;Contributors&lt;/h3&gt; None they are too lazy</string>
    <string name="share">Share</string>
    <string name="quantity_prompt">Select a quantity</string>
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
